[gd_scene load_steps=2 format=3 uid="uid://b6bahvsonp6ns"]

[ext_resource type="Script" path="res://level_select.gd" id="1_1t2aq"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_1t2aq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1150.0
offset_bottom = 1490.0
color = Color(0.562247, 0.46981, 0.448851, 1)

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
show_behind_parent = true
offset_left = 57.0
offset_top = 396.0
offset_right = 74.0
offset_bottom = 411.0
scale = Vector2(16, 16)

[node name="Button2" type="Button" parent="."]
unique_name_in_owner = true
show_behind_parent = true
offset_left = 432.0
offset_top = 396.0
offset_right = 449.0
offset_bottom = 411.0
scale = Vector2(16, 16)

[node name="Button3" type="Button" parent="."]
unique_name_in_owner = true
show_behind_parent = true
offset_left = 789.0
offset_top = 396.0
offset_right = 806.0
offset_bottom = 411.0
scale = Vector2(16, 16)

[node name="lvl1_completed2" type="ColorRect" parent="."]
offset_left = 39.0
offset_top = 383.0
offset_right = 348.0
offset_bottom = 652.0
color = Color(0.054902, 0.317647, 0.243137, 0.670588)

[node name="lvl2_completed" type="ColorRect" parent="."]
offset_left = 416.0
offset_top = 383.0
offset_right = 725.0
offset_bottom = 652.0
color = Color(0.054902, 0.317647, 0.243137, 0.670588)

[node name="lvl3_completed" type="ColorRect" parent="."]
offset_left = 772.0
offset_top = 383.0
offset_right = 1081.0
offset_bottom = 652.0
color = Color(0.0567323, 0.315807, 0.242617, 0.670588)

[node name="lvl1_locked" type="ColorRect" parent="."]
offset_left = 39.0
offset_top = 383.0
offset_right = 348.0
offset_bottom = 652.0
color = Color(0.502564, 0.0778279, 0.0386061, 0.670588)

[node name="lvl2_locked" type="ColorRect" parent="."]
offset_left = 416.0
offset_top = 383.0
offset_right = 725.0
offset_bottom = 652.0
color = Color(0.501961, 0.0784314, 0.0392157, 0.670588)

[node name="lvl3_locked" type="ColorRect" parent="."]
offset_left = 772.0
offset_top = 383.0
offset_right = 1081.0
offset_bottom = 652.0
color = Color(0.501961, 0.0784314, 0.0392157, 0.670588)

[node name="Label" type="Label" parent="."]
offset_left = 39.0
offset_top = 21.0
offset_right = 143.0
offset_bottom = 56.0
scale = Vector2(4, 4)
text = "Level Select"

[node name="Label2" type="Label" parent="."]
offset_left = 127.0
offset_top = 284.0
offset_right = 181.0
offset_bottom = 307.0
scale = Vector2(3, 3)
text = "Level 1"

[node name="Label3" type="Label" parent="."]
offset_left = 494.0
offset_top = 296.0
offset_right = 548.0
offset_bottom = 319.0
scale = Vector2(3, 3)
text = "Level 2"

[node name="Label4" type="Label" parent="."]
offset_left = 842.0
offset_top = 284.0
offset_right = 896.0
offset_bottom = 307.0
scale = Vector2(3, 3)
text = "Level 3"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
